--- a/MRP planer/MRP planer.csproj
+++ b/MRP planer/MRP planer.csproj
@@ -160,6 +160,9 @@
     <PackageReference Include="Mika.Toolkit.Uwp.UI.Animations">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>10.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.20.0</Version>
     </PackageReference>
